@@ -1,3 +1,8 @@
+2016-04-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/70627
+	* decl.c (start_enum): Don't change an existing ENUM_UNDERLYING_TYPE.
+
 2016-04-13  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/70635
